--- a/_sass/_timeline.scss
+++ b/_sass/_timeline.scss
@@ -19,7 +19,7 @@
     bottom: 6px;
     left: 5px;
     width: 2px;
-    background: var(--gray-bg);
+    background: var(--timeline-rail);
   }
 }
 
